# Notes

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.py  tox.ini
.github/workflows/: tests.yml
app/: database.py  main.py
tests/: test_main.py
