[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Y. Khokhlov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
sqlalchemy = "2.0.31"
uvicorn = "0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
